# rawgrep

./: .gitignore  Cargo.toml  README.md  bench.sh  flake.nix
.github/workflows/: rust.yml
emacs/: rawgrep.el
src/: binary.rs  cache.rs  cli.rs  core_topology.rs  ctx.rs  error.rs  ext4.rs  fragments.rs  fs.rs  grep.rs  ignore.rs  lib.rs  main.rs  matcher.rs  parser.rs  path_buf.rs  platform.rs  stats.rs  tracy.rs  util.rs  worker.rs  writer.rs
src/apfs/: apfs.rs  mod.rs  parser.rs
src/ext4/: ext4.rs  mod.rs  parser.rs
src/ntfs/: mod.rs  ntfs.rs  parser.rs
