[package]
name = "rawgrep"
version = "0.1.0"
edition = "2024"

[features]
default = ["dep:mimalloc"]
mimalloc = ["dep:mimalloc"]
use_nightly = []
tracy = ["tracy-client/enable"]

[dependencies]
regex = "1"
memmap2 = "0.9"
smallvec = "1.15.1"
mimalloc = { version = "=0.1.47", optional = true }
ctrlc = "3.5.1"
memchr = "2.7.6"
nohash-hasher = "0.2.0"
aho-corasick = "1.1.4"
memmem = "0.1.1"
libc = "0.2.177"
ignore = "0.4.25"
phf = { version = "0.13.1", features = ["macros"] }
bytecount = "0.6.9"
clap = { version = "4.5", features = ["std", "help", "derive"], default-features = false }
tracy-client = { version = "0.17.3", default-features = false }

[profile.release-fast]
inherits = "release"
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false
debug-assertions = false

# also: set RUSTFLAGS="-C force-frame-pointers=yes"
[profile.profiling]
inherits = "release"
debug = true                      # keep DWARF symbols
split-debuginfo = "packed"        # so perf can find them easily (Linux)
strip = "none"                    # don’t strip symbols
lto = false
codegen-units = 16
overflow-checks = false
panic = "abort"                   # optional: less noise, smaller code


